2011-01-02  Adam Barth  <abarth@webkit.org>

        One more .. missing in the Qt build.

        * jsc.pro:

2011-01-02  Xan Lopez  <xlopez@igalia.com>

        Fix GTK+ build.

        * GNUmakefile.am: add -I$(srcdir)/Source to the JSC cppflags so
        that anyone can include its headers without adding the prefix
        'Source/'.

2011-01-02  Carl Lobo  <carllobo@gmail.com>

        Reviewed by Adam Barth.

        Fix Windows Build for non-production where VSPropsRedirectionDir is not defined.
        https://bugs.webkit.org/show_bug.cgi?id=51797

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.vcproj/JavaScriptCore/build-generated-files.sh:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.vcproj/jsc/jsc.vcproj:
        * JavaScriptCore.vcproj/testapi/testapi.vcproj:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Fix relative include paths in an attempt to fix the Qt build.

        * JavaScriptCore.pri:
        * JavaScriptCore.pro:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Another speculative build fix for GTK.

        * GNUmakefile.am:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Speculative build fix for GTK.  Update the paths in GNUmakefile to
        include "Source".

        * GNUmakefile.am:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Update relative paths in JavaScriptCore.gyp to account for the extra
        level of directories.

        * JavaScriptCore.gyp/JavaScriptCore.gyp:

2010-12-31  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Darin Adler.

        Add a fast case for ASCII strings in HashAndUTF8CharactersTranslator::equal
        https://bugs.webkit.org/show_bug.cgi?id=50517

        This change shows about 2% performance win on the xml-parser benchmark.

        * wtf/text/AtomicString.cpp:
        (WTF::HashAndUTF8CharactersTranslator::equal):

2010-12-30  Patrick Gansterer  <paroga@webkit.org>
